First builds (no sound)

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /[Aa]ssets/IgnoreThis*
+
+# Other stuff
+LastBreath/*
+LastBreath.zip
+LastBreath_Source.zip
+Builds/*
